<resources>
    <string name="app_name">Caol</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_salir">Salir</string>
    <string name="menu_usuario">Usuario</string>
    <string name="menu_financiero">Financiero</string>
    <string name="menu_comercial">Comercial</string>
    <string name="menu_administrativo">Administrativo</string>
    <string name="menu_proyectos">Proyectos</string>
    <string name="menu_agence">Agence</string>

    <string name="por_consultor">Por Consultor</string>
    <string name="por_cliente">Por Cliente</string>
    <string name="consultores">Consultores</string>
    <string name="clientes">Consultores</string>
    <string name="agregar_consultor">agregar consultor</string>
    <string name="agregar_cliente">agregar cliente</string>

    <string name="agrega_consultores">Agrega consultores para iniciar</string>
    <string name="agrega_clientes">Agrega Clientes para iniciar</string>

    <string name="loading">Cargando</string>
    <string name="error_btn_retry">Volver a tratar</string>
    <string name="error_msg">¡Lo siento! No se pudieron obtener resultados.</string>
    <string name="error_msg_no_internet">No conectado a internet</string>
    <string name="error_msg_timeout">El servidor tardó demasiado en responder</string>
    <string name="error_msg_unknown">Ocurrió un error inesperado</string>
    <string name="error_tap_to_reload">Toca para volver a cargar</string>


    <string name="online_logout_desc">¿Desea salir de la aplicación?</string>
    <string name="online_logout_ok">Salir</string>
    <string name="online_logout_cancel">Cancelar</string>
    <string name="periodo">Periodo</string>
    <string name="liquido">Neto Liquida</string>
    <string name="costo_fijo">Costo Fijo</string>
    <string name="comision">Comisión</string>
    <string name="lucro">Lucro</string>
    <string name="saldo">Saldo</string>
    <string name="grafico">Gráfico</string>
    <string name="pizza">Pizza</string>
    <string name="relatorio">Relatório</string>
    <string name="periodo_no_valido">Periodo no válido</string>
    <string name="perfomance_comercial">Performance Comercial</string>

    <string-array name="mes">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>


    <string-array name="anio">
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
    </string-array>
</resources>
