<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/hint"
>

    <TextView
            android:id="@+id/periodo"
            android:text="@string/periodo"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margen_5"
            android:layout_weight="1"
    />
    <TextView
            android:id="@+id/liquido"
            android:text="@string/liquido"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margen_5"
    />

    <TextView
            android:id="@+id/costo_fijo"
            android:text="@string/costo_fijo"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margen_5"
    />
    <TextView
            android:id="@+id/comision"
            android:singleLine="true"
            android:maxLines="1"
            android:text="@string/comision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margen_5"
    />

    <TextView
            android:id="@+id/lucro"
            android:text="@string/lucro"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margen_5"
    />

</LinearLayout>