<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margen_corto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    
    <TextView
            android:id="@+id/cao_usuario"
            android:text="Ana Paula"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margen_extra_corto"
            android:background="@android:color/darker_gray"
    />


    <LinearLayout
            android:id="@+id/encabezado"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hint"
            app:layout_constraintTop_toBottomOf="@+id/cao_usuario"
    >
        <TextView
                android:text="@string/periodo"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margen_5"
                android:layout_weight="1"
        />
        <TextView
                android:text="@string/liquido"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="@dimen/margen_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />

        <TextView
                android:text="@string/costo_fijo"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/margen_5"
        />
        <TextView
                android:text="@string/comision"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="@dimen/margen_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />

        <TextView
                android:text="@string/lucro"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="@dimen/margen_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/encabezado"
    />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/recycler"
    >
        <TextView
                android:text="@string/saldo"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margen_5"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/total_liquido"
                android:text="@string/liquido"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="@dimen/margen_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />

        <TextView
                android:id="@+id/total_fijo"
                android:text="@string/costo_fijo"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="@dimen/margen_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/total_comision"
                android:text="@string/comision"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="@dimen/margen_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />

        <TextView
                android:id="@+id/total_lucro"
                android:text="@string/lucro"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="@dimen/margen_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>